# RP11042026

./: .bash_aliases  .xbindkeysrc  ARCH_install.sh  DSL_AI_Prompt.txt  README.md  _grimoire.c  _grimoire.cpp  _grimoire.cs  _grimoire.java  _grimoire.md  _grimoire.py  _grimoire.sh  _grimoireNotepad__LinuxQt.h  config  picom.conf  x_resources_example
TexArticle/: Article_DebianMinimal.tex
UNFINISHED_PROJECTS/: readme.md
UNFINISHED_PROJECTS/Article_ArchMinimal_DR/: Article_ArchMinimal.aux  Article_ArchMinimal.tex  Article_ArchMinimal.toc  _Journal.h
UNFINISHED_PROJECTS/InteractiveLS/: CODEX_termios.cpp  CODEX_termios.h  _grimoire_LinuxInteractiveTerminal.h  build.sh  main.cpp  notepad__profile
UNFINISHED_PROJECTS/Notepad__LinuxQt/: CMakeLists.txt  CODEX_DarkQt.cpp  CODEX_DarkQt.h  CODEX_DarkQtScintilla.cpp  CODEX_DarkQtScintilla.h  _grimoireNotepad__LinuxQt.h  build.sh  debug.sh  install_dependencies.sh  main.cpp  profileSelfDevelopment.sh  readme.txt
UNFINISHED_PROJECTS/SmoothKeyboardMouseControlX11/: CODEX_X11KMC.cpp  CODEX_X11KMC.h  _grimoire_X11KMC.h  build.sh  example.sh  main.cpp
